# pipeliner

./: CHANGELOG.md  Cargo.toml  README.md
benches/: benchmarks.rs
src/: benchmarks.rs  lib.rs  panic_guard.rs  tests.rs  unordered.rs
src/ordered/: mod.rs  promise.rs
