[package]
name = "pipeliner"
version = "0.1.1"
authors = ["Cody Casterline <cody.casterline@gmail.com>"]
license = "Apache-2.0"

description = "Provides a nice interface for parallel programming with iterators."
keywords = ["pipeline", "threads", "iterators", "parallel", "pool"]
repository = "https://github.com/NfNitLoop/pipeliner"
documentation = "https://docs.rs/pipeliner/"

[dependencies]
# None! :)