[package]
name = "pipeliner"
version = "1.0.1"
authors = ["Cody Casterline <cody.casterline@gmail.com>"]
license = "Apache-2.0"

description = "Provides a nice interface for parallel programming with iterators."
keywords = ["pipeline", "threads", "iterators", "parallel", "pool"]
repository = "https://github.com/NfNitLoop/pipeliner"
documentation = "https://docs.rs/pipeliner/"

[dependencies]
# 0.3 reintroduces the ability to know when all receivers are closed:
crossbeam-channel = "0.3"
